fix searchlist overlap on mobile

--- a/src/styles/components/search/_search.scss
+++ b/src/styles/components/search/_search.scss
@@ -45,7 +45,7 @@
     top: 95%;
     left: 8%;
     background-color: white;
-    z-index: 2;
+    z-index: 10;
     width: 95%;
     padding: 0 1rem;
     @include  prefix(transition, all .5s ease-in-out);
